spec/e2e/field/get_on_bool.lit
true.foo; # error: [line 1] Only instances have properties.
